<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent">

    <EditText android:layout_height="fill_parent" android:layout_width="wrap_content" android:hint="latitud" android:id="@+id/Latitud"/>

    <EditText android:layout_height="fill_parent" android:layout_width="wrap_content" android:hint="longitud" android:id="@+id/Longitud"/>

    <Button android:layout_height="fill_parent" android:layout_width="wrap_content" android:id="@+id/gpsBoton" android:text="GPS"/>

</LinearLayout>

    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent"> </LinearLayout>


    <TextView
        android:id="@+id/dist_tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_dist_tiempo"
        android:layout_alignParentTop="true" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/btn_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnruta"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/lugarnombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/lbl_lugares"
        android:layout_toLeftOf="@id/btn_bus" />
    </RelativeLayout>


    <RadioGroup
        android:id="@+id/rg_modos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton android:id="@+id/rb_carro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbldriving"
            android:checked="true" />

        <RadioButton android:id="@+id/rb_bici"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblbicycling" />

        <RadioButton android:id="@+id/rb_apie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblwalking" />

    </RadioGroup>
    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.google.android.gms.maps.SupportMapFragment" />rt6trfd
</LinearLayout>
